<resources>
    <string name="app_name">Kids Learning</string>
    <string name="loading">Loading</string>
    <string name="select_age_group_to_continue">Select age group to continue</string>
    <string name="lt"><![CDATA[<-]]></string>
    <string name="english_age_4_7"><![CDATA[<–  English (Age 4 – 5)]]></string>
    <string name="english_age_7_9"><![CDATA[<–  English (Age 5 – 6)]]></string>
    <string name="title_activity_math47">Math_4_7</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="maths_age_4_7"><![CDATA[<–  Maths (Age 4 – 5)]]></string>
    <string name="maths_age_7_9"><![CDATA[<–  Maths (Age 5 – 6)]]></string>
    <string name="urdu"><![CDATA[<–  Urdu (Age 4 – 5)]]></string>
    <string name="urdu79"><![CDATA[<–  Urdu (Age 5 – 6)]]></string>
    <string name="welcome_back">Welcome back,</string>
    <string name="lambda"><![CDATA[->]]></string>
    <string name="lambda_back"><![CDATA[<-]]></string>
    <string name="english_alphabets">English Alphabets</string>
    <string name="primary_colors">Primary Colors</string>
    <string name="muzakkar_moanis">مذکر مونث</string>
    <string name="alfaz_mutazad">الفاظ متضاد</string>
    <string name="wahid_jama">واحد جمع</string>
    <string name="ism_fail">اسم, فعل, فائل, مفعول</string>
    <string name="hum_qafiya">ہم قافیہ</string>
    <string name="huroof_e_alat">حرف علت</string>
    <string name="harf_tahji">حروف تہج</string>
    <string name="rang_bunyadi">رنگ بنیادی</string>
    <string name="ginti">گنتی</string>
    <string name="janwar">جانور</string>
    <string name="parinday">پرندے</string>
    <string name="phal">پھل</string>
    <string name="sabziyan">سبزیاں</string>
    <string name="alif_bay_pay">ا ب پ</string>


    <string name="one">ایک</string>
    <string name="two">دو</string>
    <string name="three">تین</string>
    <string name="four">چار</string>
    <string name="five">پانچ</string>
    <string name="six">چھے</string>
    <string name="seven">سات</string>
    <string name="eight">آٹھ</string>
    <string name="nine">نو</string>
    <string name="ten">دس</string>
    <string name="eleven">گیارہ</string>
    <string name="twelve">بارہ</string>
    <string name="thirteen">تیرہ</string>
    <string name="fourteen">چودہ</string>
    <string name="fifteen">پندرہ</string>
    <string name="sixteen">سولہ</string>
    <string name="seventeen">سترہ</string>
    <string name="eighteen">اٹھارہ</string>
    <string name="nineteen">انیس</string>
    <string name="twenty">بیس</string>
    <string name="masooty">مصوتے</string>

    <string name="u_1">الیف</string>
    <string name="u_2">بے</string>
    <string name="u_3">پے</string>
    <string name="u_4">تے</string>
    <string name="u_5">ٹے</string>
    <string name="u_6">ثے</string>
    <string name="u_7">جیم</string>
    <string name="u_8">چے</string>
    <string name="u_9">حے</string>
    <string name="u_10">خے</string>
    <string name="u_11">دال</string>
    <string name="u_12">ڈال</string>
    <string name="u_13">ذال</string>
    <string name="u_14">رے</string>
    <string name="u_15">ڑے</string>
    <string name="u_16">زے</string>
    <string name="u_17">ژے</string>
    <string name="u_18">سین</string>
    <string name="u_19">شین</string>
    <string name="u_20">صواد</string>
    <string name="u_21">ضواد</string>
    <string name="u_22">طویے</string>
    <string name="u_23">ظویے</string>
    <string name="u_24">عین</string>
    <string name="u_25">غاین</string>
    <string name="u_26">فے</string>
    <string name="u_27">قاف</string>
    <string name="u_28">کاف</string>
    <string name="u_29">گاف</string>
    <string name="u_30">لام</string>
    <string name="u_31">میم</string>
    <string name="u_32">نون</string>
    <string name="u_33">واو</string>
    <string name="u_34">ہے</string>
    <string name="u_35">ہے</string>
    <string name="u_36">چھوٹی یے بڑی یے</string>
    <string name="u_37">چھوٹی یے بڑی یے</string>
    <string name="u_38">ے</string>


</resources>